k8s/apps/backend/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    istio-injection: disabled
