k8s/apps/backend/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  gateways:
    - istio-system/main-gateway
  hosts:
    - mybackend
    - mybackend.backend
  http:
    - route:
      - destination:
          host: backend.backend.svc.cluster.local
          port:
            number: 8080
